--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <h2>house</h2>
 <h3>room</h3>
 <img src="https://www.holbertonschool.com/holberton-logo.png" alt="holberton-logo"/>
-<a href="tweets.html">tweets </a>
+<p><a href="tweets.html">tweets </a></p>
     <header>
         <ul>
             <li><a href="base_index.html">base_index </a></li>
@@ -24,7 +24,18 @@
     <footer>
         <p>Made by Dennis <a href="https://www.linkedin.com/feed/" target="_blank">LabG</a></p>
     </footer>
+
     <main>
+        <article>
+            <p>the starting point the world of coding</p>
+            <img src="https://www.holbertonschool.com/holberton-logo.png" alt="holberton-logo"/>
+            <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Are you learning a tech skill?<br><br>Time for some new month connections with other techies 🧑‍🤝‍🧑<br><br>What are you currently learning?<br><br>Share with us 👇</p>&mdash; Tim Okonkwo ⚛️ 🥑 (@timokonkwo_) <a href="https://twitter.com/timokonkwo_/status/1675780465557401601?ref_src=twsrc%5Etfw">July 3, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+
+        </article>
+
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
 
     </main>
 </body>
