--- a/index.html
+++ b/index.html
@@ -27,9 +27,10 @@
 
     <main>
         <article>
-            <p>the starting point the world of coding</p>
+        <h2>the starting point the world of coding</h2>
+
             <img src="https://www.holbertonschool.com/holberton-logo.png" alt="holberton-logo"/>
-            <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Are you learning a tech skill?<br><br>Time for some new month connections with other techies 🧑‍🤝‍🧑<br><br>What are you currently learning?<br><br>Share with us 👇</p>&mdash; Tim Okonkwo ⚛️ 🥑 (@timokonkwo_) <a href="https://twitter.com/timokonkwo_/status/1675780465557401601?ref_src=twsrc%5Etfw">July 3, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js" charset="utf-8"></script>
+            <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Are you learning a tech skill?<br><br>Time for some new month connections with other techies 🧑‍🤝‍🧑<br><br>What are you currently learning?<br><br>Share with us 👇</p>&mdash; Tim Okonkwo ⚛️ 🥑 (@timokonkwo_) <a href="https://twitter.com/timokonkwo_/status/1675780465557401601?ref_src=twsrc%5Etfw">July 3, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js"></script>
 
         </article>
 
