--- a/index.html
+++ b/index.html
@@ -37,7 +37,43 @@
         <aside>
             <p>placeholder to add comment thread later</p>
         </aside>
+        <article>
+            <table>
+                <tr>
+                    <th>Name</th>
+                    <th>Age</th>
+                    <th>Country</th>
+                </tr>
+                <tr>
+                    <td>John</td>
+                    <td>25</td>
+                    <td>USD</td>
 
+                </tr>
+                <tr>
+                    <td>Emily</td>
+                    <td>28</td>
+                    <td>Canada</td>
+
+                </tr>
+                <tr>
+                    <td>Michael</td>
+                    <td>32</td>
+                    <td>Australia</td>
+
+                </tr>
+                <tr>
+                    <td>Sophia</td>
+                    <td>21</td>
+                    <td>UK</td>
+
+                </tr>
+            </table>
+        </article>
+
+    
+
+    
     </main>
 </body>
 </html>
