--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -19,11 +19,27 @@
             <a href="a">link</a>
         </div>
 
-
     </header>
+    <!--start main-->
+    <main>
+        <div>
+            <h1>Title</h1>
+            <p>3 words</p>
+            <button>Button</button>
+        </div>
+        <div>
+            <h1>title</h1>
+            <div>
+                <img src="a" alt="picture"
+                <h2>subheading</h2>
+                <p>name</p>
+            </div>
+        </div>
 
 
 
+    </main>
+    <!--end main-->
 
 
 
