--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -36,7 +36,14 @@
             </div>
         </div>
 
-
+        <div>
+            <img src="a" alt="image"
+            <div>
+                <p>a quote</p>
+                <p>auther quote</p>
+                <p>text</p>
+            </div>
+        </div>
 
     </main>
     <!--end main-->
