--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -44,7 +44,24 @@
                 <p>text</p>
             </div>
         </div>
-
+        <div>
+            <h1>Title</h1>
+            <div>
+                <img src="a" alt="image"
+                <h2>heading</h2>
+                <p>text</p>
+                <div>
+                    <img src="a" alt="image"
+                    <h3>heading</h3>
+                    <div>
+                        <div>
+                            <img src="a" alt="one star"
+                        </div>
+                        <p>text</p>
+                    </div>
+                </div>
+            </div>
+        </div>
     </main>
     <!--end main-->
 
