--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -62,6 +62,36 @@
                 </div>
             </div>
         </div>
+
+        <div>
+            <h1>heading</h1>
+            <div>
+                <div>
+                    <img src="a" alt="image"
+                    <h3>heading</h3>
+                    <p>text</p>
+                </div>
+                <div>
+                    <img src="a" alt="image"
+                    <h3>heading</h3>
+                    <p>text</p>
+                </div
+                <div>
+                    <img src="a" alt="image"
+                    <h3>heading</h3>
+                    <p>text</p>
+                </div
+                <div>
+                    <img src="a" alt="image"
+                    <h3>heading</h3>
+                    <p>text</p>
+                </div
+            </div>
+            <button>button</button>
+        </div>
+
+
+
     </main>
     <!--end main-->
 
