--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -90,6 +90,29 @@
             <button>button</button>
         </div>
 
+        <!--start The FAQ section is ending the page before the footer:-->
+        <div>
+            <h1>Title</h1>
+            <div>
+                <div> 
+                    <h2>title</h2>
+                    <p>text</p>
+                </div>
+                <div> 
+                    <h2>title</h2>
+                    <p>text</p>
+                </div>
+                <div> 
+                    <h2>title</h2>
+                    <p>text</p>
+                </div>
+                <div> 
+                    <h2>title</h2>
+                    <p>text</p>
+                </div>
+            </div>
+        </div>
+        <!--start The FAQ section is ending the page before the footer:-->
 
 
     </main>
