--- a/html_advanced/index.html
+++ b/html_advanced/index.html
@@ -112,13 +112,23 @@
                 </div>
             </div>
         </div>
-        <!--start The FAQ section is ending the page before the footer:-->
-
+        <!--end The FAQ section is ending the page before the footer:-->
 
     </main>
     <!--end main-->
-
-
-
+    
+    <!--start footer-->
+    <div>
+        <div>
+            <img src="a" alt="image"
+            <div>
+                <a href="a">
+                    <spang>image</spang>
+                </a>
+            </div>            
+        </div>
+        <p>text</p>
+    </div>
+    <!--start footer-->
 </body>
 </html>
