--- a/css_basic/base_index.html
+++ b/css_basic/base_index.html
@@ -5,10 +5,24 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>First site</title>
-    <link href="base.css" rel="stylesheet">
-    <link href="styles.css" rel="stylesheet">
+    <link href="base.css" rel="stylesheet"/>
+    <link href="styles.css" rel="stylesheet"/>
 </head>
+
 <body>
+    <header>
+
+    </header>
+    <!--main starts-->
+    <main>
+        <article>
+
+        </article>
+        <aside>
+
+        </aside>
+    </main>
+    <!--main ends-->
 live online    
 </body>
 </html>
