--- a/css_basic/index.html
+++ b/css_basic/index.html
@@ -1,136 +1,82 @@
 <!DOCTYPE html>
-<html lang="en"> 
+<html lang="en">
 <head>
+    <link href="base.css" rel="stylesheet">
+    <link href="styles.css" rel="stylesheet">
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Let us start by the top: the header</title>
-    <link href="styles.css" rel="stylesheet"/>
-    <link href="base.css" rel="stylesheet"/>
+    <title>First site</title>
 </head>
 <body>
+
+<p></p> 
+<p></p>
+<p></p>
+<h1>land</h1>
+<h2>house</h2>
+<h3>room</h3>
+<img src="https://www.holbertonschool.com/holberton-logo.png" alt="holberton-logo"/>
+<p><a href="tweets.html">tweets </a></p>
     <header>
-        <div>
-            <a href="a"> 
-                <span>logo</span>
-            </a>
-        </div>
-        <div>
-            <a href="a">link</a>
-            <a href="a">link</a>
-            <a href="a">link</a>
-        </div>
-
+        <ul>
+            <li><a href="base_index.html">base_index </a></li>
+            <li><a href="tweets.html">tweets </a></li>
+        </ul>
     </header>
-    <!--start main-->
+   
+
     <main>
-        <div>
-            <h1>Title</h1>
-            <p>3 words</p>
-            <button>Button</button>
-        </div>
-        <div>
-            <h1>title</h1>
-            <div>
-                <img src="a" alt="picture"
-                <h2>subheading</h2>
-                <p>name</p>
-            </div>
-        </div>
+        <article>
+        <h2>the starting point the world of coding</h2>
 
-        <div>
-            <img src="a" alt="image"
-            <div>
-                <p>a quote</p>
-                <p>auther quote</p>
-                <p>text</p>
-            </div>
-        </div>
-        <div>
-            <h1>Title</h1>
-            <div>
-                <img src="a" alt="image"
-                <h2>heading</h2>
-                <p>text</p>
-                <div>
-                    <img src="a" alt="image"
-                    <h3>heading</h3>
-                    <div>
-                        <div>
-                            <img src="a" alt="one star"
-                        </div>
-                        <p>text</p>
-                    </div>
-                </div>
-            </div>
-        </div>
+            <img src="https://www.holbertonschool.com/holberton-logo.png" alt="holberton-logo"/>
+            <blockquote class="twitter-tweet"><p lang="en" dir="ltr">Are you learning a tech skill?<br><br>Time for some new month connections with other techies 🧑‍🤝‍🧑<br><br>What are you currently learning?<br><br>Share with us 👇</p>&mdash; Tim Okonkwo ⚛️ 🥑 (@timokonkwo_) <a href="https://twitter.com/timokonkwo_/status/1675780465557401601?ref_src=twsrc%5Etfw">July 3, 2023</a></blockquote> <script async src="https://platform.twitter.com/widgets.js"></script>
 
-        <div>
-            <h1>heading</h1>
-            <div>
-                <div>
-                    <img src="a" alt="image"
-                    <h3>heading</h3>
-                    <p>text</p>
-                </div>
-                <div>
-                    <img src="a" alt="image"
-                    <h3>heading</h3>
-                    <p>text</p>
-                </div
-                <div>
-                    <img src="a" alt="image"
-                    <h3>heading</h3>
-                    <p>text</p>
-                </div
-                <div>
-                    <img src="a" alt="image"
-                    <h3>heading</h3>
-                    <p>text</p>
-                </div
-            </div>
-            <button>button</button>
-        </div>
+        </article>
 
-        <!--start The FAQ section is ending the page before the footer:-->
-        <div>
-            <h1>Title</h1>
-            <div>
-                <div> 
-                    <h2>title</h2>
-                    <p>text</p>
-                </div>
-                <div> 
-                    <h2>title</h2>
-                    <p>text</p>
-                </div>
-                <div> 
-                    <h2>title</h2>
-                    <p>text</p>
-                </div>
-                <div> 
-                    <h2>title</h2>
-                    <p>text</p>
-                </div>
-            </div>
-        </div>
-        <!--end The FAQ section is ending the page before the footer:-->
+        <aside>
+            <p>placeholder to add comment thread later</p>
+        </aside>
+        <article>
+            <table>
+                <tr>
+                    <th>Name</th>
+                    <th>Age</th>
+                    <th>Country</th>
+                </tr>
+                <tr>
+                    <td>John</td>
+                    <td>25</td>
+                    <td>USD</td>
 
-    </main>
-    <!--end main-->
+                </tr>
+                <tr>
+                    <td>Emily</td>
+                    <td>28</td>
+                    <td>Canada</td>
+
+                </tr>
+                <tr>
+                    <td>Michael</td>
+                    <td>32</td>
+                    <td>Australia</td>
+
+                </tr>
+                <tr>
+                    <td>Sophia</td>
+                    <td>21</td>
+                    <td>UK</td>
+
+                </tr>
+            </table>
+        </article>
+
     
-    <!--start footer-->
-    <div>
-        <div>
-            <img src="a" alt="image"
-            <div>
-                <a href="a">
-                    <spang>image</spang>
-                </a>
-            </div>            
-        </div>
-        <p>text</p>
-    </div>
-    <!--end footer-->
+    </main>
+    <footer>
+        <p>Made by Dennis <a href="https://www.linkedin.com/feed/" target="_blank">LabG</a></p>
+    </footer>
+
 </body>
 </html>
