--- a/flexbox/1-index.html
+++ b/flexbox/1-index.html
@@ -102,7 +102,7 @@
             </ul>
           </div>
         </div>
-        <div class="section-services"> </div>
+        <class="section-services"> 
       </section>
       <!– Works section –>
       <section id="works" class="section" data-section-theme="dark">
