Add new classes on sections

--- a/flexbox/1-index.html
+++ b/flexbox/1-index.html
@@ -102,10 +102,10 @@
             </ul>
           </div>
         </div>
-        <div class="section-services">
-          
-        </div>
       </section>
+      <section class="section-services">
+
+      </section>  
       <!– Works section –>
       <section id="works" class="section" data-section-theme="dark">
         <div class="container">
