--- a/flexbox/1-index.html
+++ b/flexbox/1-index.html
@@ -107,7 +107,7 @@
 
       </section>  
       <!– Works section –>
-      <section id="works" class="section" data-section-theme="dark">
+      <section id="works" class="section" data-section-theme="dark" class="section-works">
         <div class="container">
           <header class="section-header">
             <h2 class="section-title">Works</h2>
@@ -157,7 +157,7 @@
         <div class="section-works"> </div>
       </section>
       <!– About Us section –>
-      <section id="about" class="section">
+      <section id="about" class="section" class="section-about-us">
         <div class="container">
           <header class="section-header">
             <h2 class="section-title">About Us</h2>
@@ -185,7 +185,7 @@
         <div class="section-about-us"> </div>
       </section>
       <!– Latest news section –>
-      <section id="latest_news" class="section">
+      <section id="latest_news" class="section" class="section-latest-news">
         <div class="container">
           <header class="section-header">
             <h2 class="section-title">Latest News</h2>
@@ -231,7 +231,7 @@
         <div class="section-latest-news"> </div>
       </section>
       <!– Testimonials section –>
-      <section id="testimonial" class="section">
+      <section id="testimonial" class="section" class="section-testimonial">
         <div class="container">
           <header class="section-header">
             <h2 class="section-title">Testimonials</h2>
@@ -275,7 +275,7 @@
         <div class="section-testimonial"> </div>
       </section>
       <!– Contact section –>
-      <section id="contact" class="section">
+      <section id="contact" class="section" class="section-contact">
         <div class="container">
           <header class="section-header">
             <h2 class="section-title">Contact</h2>
