--- a/flexbox/0-index.html
+++ b/flexbox/0-index.html
@@ -7,10 +7,10 @@
     <meta name="description" content="Description of the page less than 150 characters">
     <link rel="icon" type="image/png" href="images/favicon.jpg">
     <link href="https://fonts.googleapis.com/css?family=Open+Sans:400,700|Raleway:700&display=swap" rel="stylesheet">
-    <link rel='stylesheet' href='styles.css'>
+    <link rel='stylesheet' href='0-styles.css'>
   </head>
   <body>
-    <!– Header –>
+    <!--Header--> 
     <header class="header" data-section-theme="dark">
       <div class="container">
         <div class="header-logo">
@@ -44,10 +44,9 @@
           </ul>
         </nav>
       </div>
-    </header>
-    <!– Main –>
+    </header>    <!--Main-->
     <main>
-      <!– Hero section –>
+      <!--Hero section-->
       <section class="section-hero" data-section-theme="dark">
         <div class="container">
           <div class="section-body">
@@ -283,7 +282,7 @@
         </div>
       </section>
     </main>
-    <!– Footer –>
+    <!--Footer-->
     <footer class="footer" data-section-theme="dark">
       <div  class="container">
         <div class="row">
